# VoxPDF

./: .gitignore  LICENSE  README.md  index.rust.scip  initial-project-plan.md
.claude/: CLAUDE.md
.workshop/: workshop.db
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_STATUS.md  ROADMAP.md
docs/decisions/: 001-word-extraction-library.md
docs/plans/: 2025-11-07-v0.1.0-implementation-PROGRESS.md  2025-11-07-v0.1.0-implementation-design.md  2025-11-07-v0.1.0-implementation.md  2025-11-08-ffi-swift-completion.md  2025-11-08-mupdf-migration.md
docs/reviews/: slice-2-review.md
docs/slices/: slice-1-completion.md
voxpdf-core/: Cargo.toml
voxpdf-core/.cargo/: config.toml
voxpdf-core/benches/: bounding_box.rs  word_extraction.rs  word_extraction_bench.rs
voxpdf-core/docs/: performance.md
voxpdf-core/docs/decisions/: 001-migration-to-mupdf.md
voxpdf-core/examples/: debug_content_stream.rs  debug_operations.rs  debug_pdf.rs  debug_simple.rs  debug_spacing.rs  debug_toc.rs  debug_toc_detailed.rs  demo_hyphen_fix.rs  demo_migration_success.rs  lopdf_operations.rs  manual_decode.rs  paragraph_demo.rs  paragraph_demo_page.rs  simple_decode.rs  test_extraction.rs  test_lopdf_toc.rs
voxpdf-core/scripts/: build-ios.sh  create-xcframework.sh
voxpdf-core/src/: cache.rs  error.rs  ffi.rs  lib.rs  memory_pool.rs
voxpdf-core/src/extraction/: content_stream.rs  hyphenation.rs  mod.rs  paragraphs.rs  parallel.rs  streaming.rs  text.rs  toc.rs  words.rs
voxpdf-core/src/models/: chapter.rs  mod.rs  paragraph.rs  toc_entry.rs  word.rs
voxpdf-core/src/pdf/: mod.rs
voxpdf-core/tests/: cache_test.rs  hyphenation.rs  memory_pool_test.rs  paragraph_detection.rs  parallel_extraction.rs  pdf_loading.rs  streaming_test.rs  text_extraction.rs  toc_extraction.rs  word_position_spike.rs  word_positions.rs
voxpdf-core/tests/fixtures/: README.md  create_simple.py  create_toc_pdf.py  simple-positions.json
voxpdf-swift/: Package.swift  README.md  TESTING.md
voxpdf-swift/Sources/CVoxPDF/: voxpdf.h
voxpdf-swift/Sources/VoxPDF/: PDFDocument.swift  Paragraph.swift  TocEntry.swift  VoxPDFError.swift  Word.swift  module.modulemap
voxpdf-swift/Tests/VoxPDFTests/: PDFDocumentTests.swift
