[package]
name = "voxpdf-core"
version = "0.0.1"
edition = "2021"
authors = ["VoxPDF Contributors"]
license = "AGPL-3.0"
description = "Cross-platform PDF text extraction library optimized for text-to-speech"
repository = "https://github.com/yourusername/voxpdf"
keywords = ["pdf", "tts", "text-to-speech", "accessibility", "extraction"]
categories = ["parsing", "accessibility"]
readme = "../README.md"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]  # Support Rust API + FFI

[dependencies]
# PDF parsing - using MuPDF for production-grade font handling
mupdf = "0.5.0"

# Fallback PDF parser for corrupted outline structures
lopdf = { version = "0.33", optional = true }

# Text processing
unicode-segmentation = "1.11"  # Word/grapheme boundaries
regex = "1.10"  # Pattern matching for hyphenation

# Error handling
thiserror = "1.0"

# Utilities
once_cell = "1.19"  # Lazy statics

# Parallelism
rayon = "1.7"

# Serialization (for FFI and tests)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Testing
criterion = "0.5"  # Benchmarking
proptest = "1.4"   # Property-based testing

[features]
default = ["toc-fallback"]
toc-fallback = ["lopdf"]  # Enable lopdf fallback for corrupted TOC structures

[[bench]]
name = "word_extraction"
harness = false

[[bench]]
name = "bounding_box"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
